@@ -62,7 +62,7 @@ The Gtk::Window::get_position() documentation may also be relevant.
 <description>
 List all currently open displays.
 
-@newin{2,2}
+Since: 2.2
 </description>
 <parameters>
 <parameter name="display_manager">
@@ -81,7 +81,7 @@ List all currently open displays.
 Obtains a list of all toplevel windows known to GDK on the screen @screen.
 A toplevel window is a child of the root window (see
 gdk_get_default_root_window()).
-@newin{2,2}
+Since: 2.2
 </description>
 <parameters>
 <parameter name="screen">
@@ -101,7 +101,7 @@ Lists the available visuals for the specified @screen.
 A visual describes a hardware image data format.
 For example, a visual might support 24-bit color, or 8-bit color,
 and might expect pixels to be in a certain format.
-@newin{2,2}
+Since: 2.2
 </description>
 <parameters>
 <parameter name="screen">
@@ -192,7 +192,7 @@ an equal number of times to begin processing exposes.
 Gets the current location of the pointer and the current modifier
 mask for a given display.
 
-@newin{2,2}
+Since: 2.2
 </description>
 <parameters>
 <parameter name="display">
@@ -305,7 +305,7 @@ display. This is only useful for such low-level tools as an
 event recorder. Applications should never have any
 reason to use this facility.
 
-@newin{2,2}
+Since: 2.2
 </description>
 <parameters>
 <parameter name="display">
@@ -327,7 +327,7 @@ quantities related to the current pointer position.
 Determines the name to pass to gdk_display_open() to get
 a #GdkDisplay with this screen as the default screen.
 
-@newin{2,2}
+Since: 2.2
 </description>
 <parameters>
 <parameter name="screen">
@@ -606,7 +606,7 @@ or -1 if the current pixbuf should be displayed forever. Glib::signal_timeout.co
 conveniently takes a timeout in milliseconds, so you can use a timeout
 to schedule the next update.
 
-@newin{2,14}
+Since: 2.14
 </description>
 <parameters>
 <parameter name="iter">
@@ -629,7 +629,7 @@ to the next frame, which may happen anytime you call
 gdk_pixbuf_animation_iter_advance(). Copy the pixbuf to keep it, with 
 Gdk::Pixbuf::copy() as it may get recycled as you advance the iterator.
 
-@newin{2,14}
+Since: 2.14
 </description>
 <parameters>
 <parameter name="iter">
@@ -649,7 +649,7 @@ for an area of the frame currently streaming in to the loader. So if
 you&apos;re on the currently loading frame, you need to redraw the screen for
 the updated area.
 
-@newin{2,14}
+Since: 2.14
 </description>
 <parameters>
 <parameter name="iter">
@@ -683,7 +683,7 @@ display, assuming the display had been rendered prior to advancing;
 if %TRUE, you need to call get_pixbuf() and update the
 display with the new pixbuf.
 
-@newin{2,14}
+Since: 2.14
 </description>
 <parameters>
 <parameter name="iter">
