@@ -1,3 +1,12 @@
+2010-04-07  Murray Cumming  <murrayc@murrayc.com>>
+
+    Really fix the @newin2p* in the *_override.xml files.
+
+	* gdk/src/gdk_docs_override.xml:
+	* gtk/src/gtk_docs_override.xml: Use GTK+'s original Since: syntax here 
+    instead of @newin{2,*} because that is what our parser currently expects.
+    Otherewise it is interpreted as a parameter name.
+
 2010-04-07  Murray Cumming  <murrayc@murrayc.com>
 
     Replace some @newin2p* with @newin{2,*}.
